[feat] [1.新增用户全局 AI 笔记权限与服务端工具校验。 2.精简 AI 对话入口并优化 Vite 首次预构建。]